Fix spacing for tooltip on is-invalid
* Update z-index of tooltip content to cover error tooltips

--- a/src/molecules/field.scss
+++ b/src/molecules/field.scss
@@ -209,7 +209,7 @@
             transition: opacity .3s linear, transform .3s ease-out;
             -webkit-transition: opacity .3s linear, -webkit-transform .3s ease-out;
             -moz-transition: opacity .3s linear, -moz-transform .3s ease-out;
-            z-index: 0;
+            z-index: 10;
 
             @include respond-to-ie(8) {
                 display: block;
@@ -224,6 +224,10 @@
     display: block;
     padding: 14px;
     z-index: 2;
+
+    .is-invalid & {
+        padding: 19px 14px 9px 14px;
+    }
 }
 
 .cui__field-tooltip__button {
